Fix some overflow quirks in the sample app

--- a/packages/mural-picker/src/components/mural-picker-form/styles.scss
+++ b/packages/mural-picker/src/components/mural-picker-form/styles.scss
@@ -2,7 +2,6 @@
   font-family: 'Proxima Nova', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  margin: auto;
   outline: 0;
 
   .select-row {
