--- a/sample/src/app.css
+++ b/sample/src/app.css
@@ -5,6 +5,8 @@ body {
 
 #root {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .App {
